--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
         
         // ارسال فاکتور فروش به فرم گوگل
         function submitSaleInvoiceToGoogle(invoice) {
-            const formUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSdKhpMU4KDf-GdX5V1L-_oC2Kc1Dqfx9Az38gb6HMuc8dB0Bg/viewform?usp=dialog';
+            const formUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSdKhpMU4KDf-GdX5V1L-_oC2Kc1Dqfx9Az38gb6HMuc8dB0Bg/formResponse';
             
             // ارسال هر آیتم به صورت جداگانه
             invoice.items.forEach(item => {
